tests/agl/rejections/type/ambiguous_constructor.agl
enum Review
  | Same
enum TestResult
  | Same
let x = Same
